# txgen

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
apps/generator-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/generator-ui/src/: App.tsx  main.tsx
apps/generator-ui/src/api/: client.ts
apps/generator-ui/src/components/: MainLayout.tsx  ui.tsx
apps/generator-ui/src/context/: AuthContext.tsx
apps/generator-ui/src/pages/: AccountGeneratorPage.tsx  AccountGeneratorTab.tsx  DashboardsPage.tsx  EventFeedPage.tsx  IntegrityPage.tsx  LoginPage.tsx  TransactionGeneratorPage.tsx
apps/generator-ui/src/utils/: logger.ts
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: timescaledb.yml
infra/keycloak/: txgen-realm.json
infra/mongo/: mongo-init.js
infra/nginx/: nginx.conf
infra/timescaledb/: Dockerfile.migrations
infra/timescaledb/migrations/: 001_init.py  env.py
services/account-api/: Dockerfile  pyproject.toml  run_local.sh
services/account-api/src/: main.py
services/account-api/src/routers/: auth.py  seed.py
services/integrity-checker/: Dockerfile  pyproject.toml  run_local.sh
services/integrity-checker/src/: main.py
services/mongo-consumer/: Dockerfile  pyproject.toml  run_local.sh
services/mongo-consumer/src/: main.py
services/rag-processor/: Dockerfile  pyproject.toml  run_local.sh
services/rag-processor/src/: main.py
services/txgen-api/: Dockerfile  pyproject.toml  run_local.sh
services/txgen-api/src/: main.py
services/txgen-api/src/routers/: auth.py
