[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txgen-account-api"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    # Web framework + ASGI server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    # Shared packages (installed as editable local packages)
    "txgen-models @ file:///app/packages/models",
    "txgen-iso-mapper @ file:///app/packages/iso_mapper",

    # Database drivers
    "pymongo>=4.7.0",
    "motor>=3.4.0",        # async MongoDB (used by integrity checker)

    # Kafka producer
    "confluent-kafka>=2.4.0",

    # Fake data generation (the original Python Faker library)
    "Faker>=25.0.0",

    # HTTP client for Keycloak calls
    "httpx>=0.27.0",

    # Redis async client for session storage
    "redis[asyncio]>=5.0.0",

    # JWT decoding
    "python-jose[cryptography]>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
