[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txgen-mongo-consumer"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "txgen-models",
    "txgen-iso-mapper",
    "pymongo>=4.7.0",
    "confluent-kafka>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
