[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txgen-rag-processor"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "txgen-models",
    "txgen-iso-mapper",
    "asyncpg>=0.29.0",
    "confluent-kafka>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
