[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txgen-txgen-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "txgen-models @ file:///app/packages/models",
    "txgen-iso-mapper @ file:///app/packages/iso_mapper",
    "pymongo>=4.7.0",
    "motor>=3.4.0",
    "confluent-kafka>=2.4.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "redis[asyncio]>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "Faker>=25.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
